# datavisualisation

./: .gitignore  Makefile  README.md  pyproject.toml
CSV/: 16-9_world_fires.py  death_valley_highs_lows.py  sitka_death_valley_comparison.py  sitka_highs.py  sitka_highs_lows.py  sitka_highs_year.py  sitka_rainfall.py
GeoJSON/: 16-9_world_fires.py  eq_explore_data.py  global_earthquakes.html  new_eq.py  show_color_scales.py  temp-plot.html
GeoJSON/data/: 1.0_month.geojson
Plotly/: d6.html  die_visual.py
Plotly/d6x2/: d6_d10.html  d6_d6.html  die.py  die_visual.py
Screenshots/: dice_two_d6.html
datavisualisation/ex1_matplotlib/: ex3_scatter_cubes.py  ex4_rw_visual.py  random_walk.py
datavisualisation/ex2_plotly/: die.py
datavisualisation/ex3_CSV/: ex1_sitka_highs.py  ex2_sitka_highs_year.py  ex3_sitka_highs_lows.py  ex4_death_valley_highs_lows.py  ex5_sitka_rainfall.py  ex6_sitka_death_valley_comparison.py
datavisualisation/ex4_GeoJSON/: ex1_eq_explore_data.py  ex2_eq_explore_data_px.py  ex3_world_fires.py
ex1_matplotlib/: ex5_molecular_motion.py
ex2_plotly/: ex1_d6_visual_px.py  ex2_d6_visual.py  ex3_two_d6_visual.py
ex3_CSV/: ex2_sitka_highs_year.py  ex3_sitka_highs_lows.py  ex6_sitka_death_valley_comparison.py
ex4_GeoJSON/: ex1_eq_explore_data.py  ex3_world_fires.py
matplot/: mpl_squares.py  random_walk.py  scatter_cubes.py  scatter_squares.py
matplotlib/: ex1_mpl_squares.py  ex2_scatter_squares.py  ex4_rw_visual.py  random_walk.py  rw_visual.py  scatter_squares.py
